# Dynamic-Abstract-Neural-Computing

./: .gitignore  LICENSE  README.md
code/: CMakeLists._txt  CMakeLists.txt  CMakeLists.txt.autosave  README.md  main._cpp
code/QtGUI/: CMakeLists.txt  CurrentWindow.cpp  CurrentWindow.h  CurrentWindow.ui  GradientWindow.cpp  GradientWindow.h  GradientWindow.ui  PhasePlotWindow.cpp  PhasePlotWindow.h  PhasePlotWindow.ui  ScQtNeuron_AP_Window.cpp  ScQtNeuron_AP_Window.h  ScQtNeuron_AP_Window.ui  ScQtNeuron_MainWindow.cpp  ScQtNeuron_MainWindow.h  ScQtNeuron_MainWindow.ui  SimulatorControlWindow.cpp  SimulatorControlWindow.h  SimulatorControlWindow.ui  SimulatorControlWindow.ui.autosave  VoltageWindow.cpp  VoltageWindow.h  VoltageWindow.ui  console.cpp  neurontab.cpp  neurontab.h  neurontab.ui  neurontab.ui.autosave  ripessettings.cpp  ripestab.h
code/QtGUI/include/: GradientWindow.h  PhasePlotWindow.h  ScQtNeuron_MainWindow.h  SimulatorControlWindow.h  VoltageWindow.h  neurontab.h  ripestab.h
code/cmake/: BuildType.cmake  FindSystemCLanguage.cmake  FindVulkan.cmake  Packages.cmake  Summary.cmake  SystemCLanguageConfig.cmake  Version.cmake
code/demos/: CMakeLists.txt
code/demos/CustomPlotRealTime/: CMakeLists.txt  VoltageWindow.cpp  VoltageWindow.h  main.cpp  mainwindow.cpp  mainwindow.h
code/demos/__AP_Conceptual/: CMakeLists.txt  NeuronScQt_AP_Conceptual.cpp
code/demos/scQtSimulator/: CMakeLists.txt  main.cpp  mainwindow._cpp  scQAbout.cpp  scQAbout.h  scQMainGUI._cpp  scQMainGUI.h  scQSimulator._cpp  scQSimulator._h  scQtNeuron_Main.cpp  scQtNeuron_Main.h  scQtNeuron_MainWindow.cpp  scQtNeuron_MainWindow.ui  scQtNeuron_Mainform._ui  scQtSimulator.cpp  ui_scQtNeuron_Mainform._h
code/demos/scQtSimulator/include/: NeuronPhysicalDemo.h  mainwindow.h  scQtNeuron_MainWindow.h
code/demos/scQtSimulator/old/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  scQSimulator.cpp  scQtModule.cpp  scQtModule.h  scQtSimulator.cpp  scQtSimulator.h  scQtSimulator2._h  scQtSimulator2.c_pp  scQtThread.cpp
code/gtest/NeuronScQt/: CMakeLists.txt  NeuronScQt_gtest.cpp  TestAbstractPUBase.cpp  TestBioPUBase.cpp  sctestbench_simple.cpp
code/gtest/NeuronScQt/include/: sctestbench_simple.h
code/include/: MyWindow.h
code/neuron/: CMakeLists.txt  DemoNeuronPhysical.cpp  MacroTimeBenchmarking.h  ScQtNeuron_MainWindow.Old_cpp  ScQtNeuron_MainWindow.Old_h  ScQtNeuron_MainWindow.cpp  ScQtNeuron_MainWindow.h  ScQtNeuron_ParameterWindow._h  ScQtNeuron_Plot_AP.__cpp  ScQtNeuron_Plot_AP.__h  ScQtNeuron_dVdt_Window._cpp  ScQtNeuron_dVdt_Window.cpp  ScQtNeuron_dVdt_Window.h  ScQtNeuron_dVdt_Window.ui  ScQtSimulator.cpp  TestNeuronPhysical._cpp  TestNeuronPhysical.cpp  TestNeuronPhysical.h  Utils.cpp  _CMakeLists.txt  mainwindow.ui  neuronhandler.cpp  neuronhandler.h  neuroninterface.h  neuronregistry.cpp  neuronregistry.h  neurontab._h  neurontab.cpp  neurontab.h
code/neuron/include/: Constants.h  EventGencomp.h  GenCompStageMachineType.h  ScQtSimulator.h  Utils.h  scGenComp_Config.h
code/neuron/neurons/: GenCompStageMachineType.h  NeuronConceptual.h  NeuronDemo.cpp  NeuronDemo.h  NeuronInputCurrent.cpp  NeuronPhysical.cpp  scGenComp_PU_Abstract.cpp  scGenComp_PU_Bio.cpp  scGenComp_PU_Tech._cpp  scGenComp_PU_Tech.cpp  scNeuronSimulator._h  scQtSimulator._h
code/neuron/neurons/include/: DemoNeuronPhysical.h  NeuronInputCurrent.h  NeuronPhysical.h  TestNeuronPhysical._h  TestNeuronPhysical.h  Utils.h  scGenComp_PU_Abstract.h  scGenComp_PU_Abstract.h.autosave  scGenComp_PU_Bio.h  scGenComp_PU_Tech._h
code/neuron/neurons_old/: Constants.h  NeuronConceptual.cpp  NeuronInputCurrent.cpp  NeuronInputCurrent.h  NeuronPhysical.cpp  NeuronPhysical.h  scGenComp_Config.h  scGenComp_PU_Abstract.cpp  scGenComp_PU_Abstract.h  scGenComp_PU_Bio.cpp  scGenComp_PU_Bio.h  scGenComp_PU_Tech.cpp  scGenComp_PU_Tech.h  scNeuronSimulator._cpp  scQtSimulator._cpp
code/src/: CMakeLists.txt  main._cpp  main.cpp
code/src/cli/: clioptions.cpp  clioptions.h  clirunner.cpp  clirunner.h  programutilities.cpp  programutilities.h
code/src/version/: CMakeLists.txt  Makefile  gitversion.h  version.cmake  version.cpp
doc/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  makedances  makemanual  makesite  maketest
doc/doxy/: CMakeLists.txt  Doxyfile  Doxyfile.in  Glossary.dox  Makefile  Overview.dox  Release-notes.dox  cmake_install.cmake
doc/manual/: manual.aux  manual.bbl  manual.blg  manual.glo  manual.gls  manual.glsdefs  manual.idx  manual.ilg  manual.ind  manual.ist  manual.lof  manual.lot  manual.maf  manual.mtc10  manual.mtc12  manual.mtc3  manual.mtc4  manual.mtc5  manual.mtc6  manual.mtc9  manual.out  manual.tex  manual.toc  manual.xml  manual_old.tex  manual_orig.tex  schema.tex  test.tex  test_new.tex
doc/manual/fig/: AP_0_offset.csv  AP_0_offset2.csv  AP_Artificial_test.tex  AP_Conceptual.tex  AP_dV_V_loop.tex  DielectricMembrane.tex  HodgkinHuxleyFig2Simple.tex  MembraneForces_AP.tex  MembraneForces_text.tex  Neumann_Timing_Extended.tex  NeuronStateMachine.tex  NeuronStateMachineSimple.tex  Potential3D.xlsx
doc/manual/src/: Computing-AP_Concept.tex  Computing-AP_Timing.tex  Computing-Foreword.tex  Computing-Introduction.tex  Computing.tex  DANCES.tks  Foreword.tex  Glossary.tex  Heading.tex  Information-Foreword.tex  Information.tex  Intelligence.tex  Multiple.tex  Physics-ActionPotential.tex  Physics-Addendum.tex  Physics-Animal.tex  Physics-Appendix.tex  Physics-Channel.tex  Physics-Components.tex  Physics-Consequences.tex  Physics-Control.tex  Physics-Dynamics.tex  Physics-Electricity.tex  Physics-Electrolyte.tex  Physics-Foreword.tex  Physics-Imitating.tex  Physics-Introductory.tex  Physics-Measuring.tex  Physics-Membrane.tex  Physics-Oscillator.tex  Physics-Resources.tex  Physics-ScienceMethods.tex  Physics-Spatiotemporal.tex  Physics-Thermodynamics.tex  Physics-Unified.tex  Physics.tex  Physiology-ActionPotential.tex  Physiology-Addendum.tex  Physiology-Animal.tex  Physiology-Electrodiffusion.tex  (+35 more)
doc/site/: index.xml
doc/sty/: latexmlman.sty  latexmlreleases.tex
(+625 files in other folders)
